--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -1,9 +1,7 @@
 # 规律
 
-每一个生物个体都是一个趋利避害机器，给利则趋，给害则避，不利不害则不动，仅此而已。
+每一个生物个体都是一个趋利避害机器，给利则趋，给害则避，不利不害则不动，仅此而已。每一个生物个体因为立场不同，所以判断利害的标准不同。
 
-每一个生物个体因为立场不同，所以判断利害的标准不同。
+供需导致分工，分工导致阶层，阶层导致宗教。
 
-供需带来分工，分工带来阶层，阶层带来宗教。
-
-为了生存发动战争，于是战争会威胁生活。为了生活维持和平，但是和平会威胁生存。
+为了生存开始战争，直到战争毁掉了生活。为了生活开始和平，直到和平毁掉了生存。
