--- a/第1章：慧根.md
+++ b/第1章：慧根.md
@@ -1,7 +1,7 @@
 # 慧根
 
-拥有慧根的个体拥有以其它个体的立场观察环境的能力。
+拥有慧根的个体具有以其它个体的立场观察环境的能力。
 
-拥有慧根的个体拥有以其它个体的立场改造世界的能力。
+拥有慧根的个体具有以其它个体的立场改造世界的能力。
 
 拥有慧根的个体认为世界的变化是自然的，是因为认识了规律。
