--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -1,6 +1,6 @@
 # 规律
 
-每一个生物个体都是一个趋利避害机器，给利则趋，给害则避，不利不害则不动，仅此而已。每一个生物个体因为立场不同，所以判断利害的标准不同。
+每一个生物个体都是一个趋利避害机器，给利则趋，给害则避，不给利不给害则不动，仅此而已。每一个生物个体的立场不同，所以判断利害的标准不同。
 
 供需导致分工，分工导致阶层，阶层导致宗教。
 
