--- a/第1章：慧根.md
+++ b/第1章：慧根.md
@@ -2,6 +2,6 @@
 
 拥有慧根的个体拥有以其它个体的立场观察环境的能力。
 
-拥有慧根的个体拥有以其它个体的立场改造世界的能力。
+拥有慧根的个体拥有以其它个体的立场改造环境的能力。
 
-拥有慧根的个体认为世界的变化是自然的，因为认识了规律。
+拥有慧根的个体认为世界是自然的，因为认识了规律。
