--- a/第3章：规律.md
+++ b/第3章：规律.md
@@ -1,5 +1,7 @@
 # 规律
 
-第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以每一个生物个体判断利害的标准不同。
+第一规律：每一个生物个体都是一个趋利避害机器，每一个生物个体的立场不同，每一个生物个体判断利害的标准不同。
 
-第二规律：趋利避害导致供给和需求。供给和需求导致分工，分工导致阶层，阶层导致宗教。趋利避害就是生存和生活。为了生存开始战争，直到战争毁掉了生活；为了生活开始和平，直到和平威胁了生存。
+第二规律：趋利避害导致供给和需求，供给和需求导致分工，分工导致阶层，阶层导致宗教。
+
+第三规律：趋利避害就是生存和生活，为了生存开始战争，直到战争毁掉了生活，为了生活开始和平，直到和平威胁了生存。
