--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -2,6 +2,6 @@
 
 第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。每一个生物个体的立场不同，每一个生物个体判断利害的标准不同。
 
-第三规律：趋利避害导致需求和供给。需求和供给导致分工，分工导致阶层，阶层导致宗教。
+第三规律：趋利避害导致了需求和供给。需求和供给导致了分工，分工导致了阶层，阶层导致了宗教。
 
 第三规律：趋利避害的过程就是生存和生活。为了生存开始战争，直到战争毁掉了生活，为了生活开始和平，直到和平威胁了生存。
