--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -1,6 +1,6 @@
 # 规律
 
-第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以每一个生物个体判断利害的标准不同。
+第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以判断利害的标准不同。
 
 第三规律：趋利避害导致了需求和供给。需求和供给导致了分工，分工导致了阶层，阶层导致了宗教。
 
