--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -4,8 +4,8 @@
 
 第二规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以判断利害的标准不同。
 
-第三规律：趋利避害导致了需求和供给。需求和供给导致了分工，分工导致了阶层，阶层导致了宗教。
+第三规律：生物需要新陈代谢，所以生物世界是一个食物链，如果吃和被吃的现象消失了，那么生物世界就消失了。
 
-第四规律：世界是一个食物链，如果吃和被吃的现象消失了，那么世界就停摆了。
+第四规律：趋利避害导致了需求和供给。需求和供给导致了分工，分工导致了阶层，阶层导致了宗教。
 
 第五规律：趋利避害的过程就是生存和生活。为了生存开始战争，直到战争毁掉了生活，为了生活开始和平，直到和平威胁了生存。
