--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -1,11 +1,7 @@
 # 规律
 
-第一规律：个体无法观察自己，个体只能观察环境，然后环境观察个体。个体无法改造自己，个体只能改造环境，然后环境改造个体。
+第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以看待利害的标准不同。
 
-第二规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以判断利害的标准不同。
+第二规律：生物物种间存在食物链条，如果吃和被吃的现象消失了，那就代表生物消失了。
 
-第三规律：生物需要新陈代谢，所以生物世界是一个食物链，如果吃和被吃的现象消失了，那么生物世界就消失了。
-
-第四规律：趋利避害导致了需求和供给。需求和供给导致了分工，分工导致了阶层，阶层导致了宗教。
-
-第五规律：趋利避害的过程就是生存和生活。为了生存开始战争，直到战争毁掉了生活，为了生活开始和平，直到和平威胁了生存。
+第三规律：生物种群内存在组织架构，组织架构导致了阶层，阶层导致了宗教，宗教导致了阶层周期性重组。
