--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -2,6 +2,6 @@
 
 第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以看待利害的标准不同。
 
-第二规律：生物物种间存在食物链，如果吃和被吃的现象消失了，那就代表生物消失了。
+第二规律：生物物种间存在食物链。
 
-第三规律：生物种群内存在阶层，阶层导致了宗教，宗教导致了周期性的阶层重组。
+第三规律：生物种群内存在支配链。
