--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -2,6 +2,6 @@
 
 第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。因为每一个生物个体的立场不同，所以看待利害的标准不同。
 
-第二规律：生物物种间存在食物链。
+第二规律：生物物种间存在食物链。食物链的一个特征是平衡。
 
-第三规律：生物种群内存在支配链。
+第三规律：生物种群内存在支配链。支配链的一个特征是周期。
