--- a/第1章：慧根.md
+++ b/第1章：慧根.md
@@ -1,5 +1,9 @@
 # 慧根
 
-拥有慧根的个体拥有进入其它个体的立场观察环境的能力。事实上，个体是无法观察自己的，个体只能观察环境，然后环境观察个体。
+拥有慧根的个体拥有进入其它个体的立场观察环境的能力。
 
-拥有慧根的个体拥有进入其它个体的立场改造环境的能力。事实上，个体是无法改造自己的，个体只能改造环境，然后环境改造个体。
+事实上，个体是无法观察自己的，个体只能观察环境，然后环境观察个体，所以个体通过观察环境观察自己。
+
+拥有慧根的个体拥有进入其它个体的立场改造环境的能力。
+
+事实上，个体是无法改造自己的，个体只能改造环境，然后环境改造个体，所以个体通过改造环境改造自己。
