--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -2,7 +2,7 @@
 
 第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。每一个生物个体因为立场不同，所以看待利害的标准不同。
 
-第二规律：趋利避害的核心就是需求和供给。
+第二规律：趋利避害的核心是配置需求和供给。
 
 第三规律：生物物种间存在食物链。食物链的一个变化规律是动态性平衡。
 
