--- a/第2章：规律.md
+++ b/第2章：规律.md
@@ -1,9 +1,5 @@
 # 规律
 
-第一规律：每一个生物个体都是一个趋利避害机器，给利则趋，给害则避。每一个生物个体因为立场不同，所以看待利害的标准不同。
+第一规律：每一个生物个体都是一个趋利避害机器。每一个生物个体的立场不同，所以判断利害的标准不同。
 
-第二规律：趋利避害的核心是需求和供给。需求就是供给，供给就是需求。
-
-第三规律：生物物种间存在食物链。食物链的一个变化规律是动态性平衡。
-
-第四规律：生物种群内存在支配链。支配链的一个变化规律是周期性重组。
+第二规律：世界是一个需求供给系统。
