--- a/第1章：慧根.md
+++ b/第1章：慧根.md
@@ -1,9 +1,5 @@
 # 慧根
 
-拥有慧根的个体拥有进入其它个体的立场观察环境的能力。
+拥有慧根的个体拥有进入其它个体的立场观察环境的能力。个体观察环境，环境观察个体，拥有慧根的个体通过观察环境观察自己。
 
-个体观察环境，环境观察个体，个体通过观察环境观察自己。
-
-拥有慧根的个体拥有进入其它个体的立场改造环境的能力。
-
-个体改造环境，环境改造个体，个体通过改造环境改造自己。
+拥有慧根的个体拥有进入其它个体的立场改造环境的能力。个体改造环境，环境改造个体，拥有慧根的个体通过改造环境改造自己。
