--- a/第1章：慧根.md
+++ b/第1章：慧根.md
@@ -1,5 +1,5 @@
 # 慧根
 
-拥有慧根的个体拥有进入其它个体的立场观察环境的能力。个体能观察环境，环境能观察个体，拥有慧根的个体能通过观察环境观察自己。
+拥有慧根的个体拥有进入其它个体的立场观察环境的能力。个体能够观察环境，环境能够观察个体，拥有慧根的个体能够通过观察环境观察自己。
 
-拥有慧根的个体拥有进入其它个体的立场改造环境的能力。个体能改造环境，环境能改造个体，拥有慧根的个体能通过改造环境改造自己。
+拥有慧根的个体拥有进入其它个体的立场改造环境的能力。个体能够改造环境，环境能够改造个体，拥有慧根的个体能够通过改造环境改造自己。
