--- a/第1章：他观他改物体.md
+++ b/第1章：他观他改物体.md
@@ -1,3 +1,3 @@
 # 他观他改物体
 
-个体能够观察环境，环境能够观察个体，拥有慧根的个体能够通过观察环境的方法观察自己。个体能够改造环境，环境能够改造个体，拥有慧根的个体能够通过改造环境的方法改造自己。
+个体无法观察自己，个体通过观察环境观察自己。个体无法改造自己，个体通过改造环境改造自己。
