--- a/第2章：趋利避害机器.md
+++ b/第2章：趋利避害机器.md
@@ -1,3 +1,5 @@
 # 趋利避害机器
 
-每一个生物个体都是一个趋利避害机器，喜欢正反馈型事件，讨厌负反馈型事件。每一个生物个体的立场不同，所以判断利害的标准不同。
+每一个生物个体都是一个趋利避害机器，喜欢正反馈型事件，讨厌负反馈型事件。
+
+每一个生物个体的立场不同，所以判断利害的标准不同。
