--- a/第2章：趋利避害机器.md
+++ b/第2章：趋利避害机器.md
@@ -1,7 +1,5 @@
 # 趋利避害机器
 
-每一个生物个体都是一个趋利避害机器。
+每一个生物个体都是一个趋利避害机器。真善美就是利，假恶丑就是害。
 
-真善美就是利，假恶丑就是害。
-
-每一个生物个体的立场不同，所以判断利害的标准不同。
+由于每一个生物个体的立场不同，所以判断利害的标准不同。
