--- a/第2章：他观他改物体.md
+++ b/第2章：他观他改物体.md
@@ -1,3 +1,4 @@
 # 他观他改物体
 
-生物个体无法直接观察自己，生物个体通过观察环境间接观察自己。生物个体无法直接改造自己，生物个体通过改造环境间接改造自己。
+生物个体无法直接观察自己，生物个体通过观察环境间接观察自己。
+生物个体无法直接改造自己，生物个体通过改造环境间接改造自己。
